# BYLD-Assignment

./: .dockerignore  .env  .env.example  .gitignore  AI_LOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260424_0001_create_portfolios_table.py  20260425_0002_add_portfolio_related_tables.py  20260425_0003_make_quantities_integers.py  20260426_0004_set_money_precision_to_19_4.py
app/: main.py
app/api/v1/routers/: dividends.py  portfolios.py  transactions.py
app/core/: config.py  constants.py  database.py  docker_bootstrap.py  logging.py
app/exceptions/: base.py  dividend.py  portfolio.py  transaction.py
app/models/: __init__.py  dividend.py  holding.py  portfolio.py  transaction.py
app/repositories/: dividend_repository.py  holding_repository.py  portfolio_repository.py  transaction_repository.py
app/schemas/: __init__.py  common.py  dividend.py  holding.py  portfolio.py  transaction.py
app/services/: dividend_service.py  portfolio_service.py  transaction_service.py
app/utils/: money.py
byld_portfolio_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_dividends.py  test_holdings.py  test_portfolios.py  test_transactions.py
tests/integration/: test_real_postgres.py
