[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byld-portfolio-api"
version = "0.1.0"
description = "FastAPI backend for a portfolio management system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
markers = [
  "integration: tests that require a real PostgreSQL database",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
